<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:inputType="text"
        android:hint="@string/name_min_3_characters"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_below="@id/etName"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        />

    <EditText
        android:id="@+id/etMobileNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_below="@id/etEmail"
        android:inputType="number"
        android:hint="@string/mobile_number_10_digits"
        />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:maxLength="10"
        android:maxLines="1"
        android:layout_below="@id/etMobileNum"
        android:inputType="text"
        android:hint="@string/delivery_address"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:maxLines="1"
        android:layout_below="@id/etAddress"
        android:inputType="textPassword"
        android:hint="@string/password_min_4_characters"
        />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:maxLines="1"
        android:layout_below="@id/etPassword"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:padding="6dp"
        android:layout_below="@id/etConfirmPassword"
        android:background="@color/maroon"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp" />

</RelativeLayout>