<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:src="@drawable/avengers_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/etMobileNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@id/imgLogo"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:hint="@string/mobile_number_10_digits"/>

    <EditText
        android:id="@+id/etEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@id/etMobileNum"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/enter_password"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@id/etEnterPassword"
        android:background="@color/maroon"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/btnLogin"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:padding="6dp" />

    <TextView
        android:id="@+id/txtRegisterYourself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:padding="6dp" />

</RelativeLayout>