<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:src="@drawable/avengers_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/txtMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_mobile"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/imgLogo"/>


    <EditText
        android:id="@+id/etMobileNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:maxLength="10"
        android:maxLines="1"
        android:layout_below="@id/txtMsg"
        android:inputType="number"
        android:hint="@string/mobile_number_10_digits"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_below="@id/etMobileNum"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:padding="6dp"
        android:layout_below="@id/etEmail"
        android:background="@color/maroon"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp" />

</RelativeLayout>